[build] simplify the trial process

--- a/python/csv-processor.ipynb
+++ b/python/csv-processor.ipynb
@@ -89,7 +89,7 @@
     ").reset_index(drop=True).to_json(orient='records', indent=4)\n",
     "\n",
     "# Save the result to a JSON file\n",
-    "output_path = 'course_data_final_fixed.json'\n",
+    "output_path = 'course_data.json'\n",
     "with open(output_path, 'w') as file:\n",
     "    file.write(result_json)\n",
     "\n",
